--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,37 +2,12 @@
   
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.coin-icon{
+  font-size: xx-large;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.coin-silver-icon {
+  color: silver;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.coin-gold-icon {
+  color: gold;
 }
