--- a/frontend/src/Assets/Styles/SideNav.Layout.css
+++ b/frontend/src/Assets/Styles/SideNav.Layout.css
@@ -2,7 +2,7 @@
   --primary-color: #ffffff;
   --secondary-color: #e6e6e6;
   --tertiary-color: #c191d4;
-  --bg1-color: #9D50BB;
+  --bg1-color: #86C232;
   --highlighter-color: #daa520;
 }
 
@@ -54,15 +54,6 @@
 }
 .balance-title {
   color: var(--secondary-color);
-}
-.balance-icon{
-  font-size: xx-large;
-}
-.balance-silver-icon {
-  color: silver;
-}
-.balance-gold-icon {
-  color: gold;
 }
 
 .top-up-wrapper {
